feat: harden CI, example correctness, and docs against template analysis
Make advertised gates match reality (IT profile, Spotless, Enforcer,
pinned Actions/wrapper), fix copy-paste hazards in REST/clients/concurrency,
and align docs with Java 21 plus an Apache-2.0 LICENSE.